--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -484,6 +484,72 @@
   "myCollection": "مجموعتي",
   "search": "بحث",
   "showAll": "عرض الكل",
-  "showLess": "عرض أقل"
+  "showLess": "عرض أقل",
+
+ "learningPreferences": "تفضيلات التعلم",
+  "subjects": "المواد",
+  "enterSubjects": "أدخل المواد",
+  "learningStyle": "أسلوب التعلم",
+  "studyTime": "وقت الدراسة",
+  "difficulty": "درجة الصعوبة",
+  "goals": "الأهداف",
+  "weeklyGoal": "الهدف الأسبوعي",
+  "longTermGoal": "الهدف طويل المدى",
+  "save": "حفظ",
+  "next": "التالي",
+  "back": "رجوع",
+
+  "visual": "بصري",
+  "auditory": "سمعي",
+  "kinesthetic": "حسي حركي",
+
+  "morning": "الصباح",
+  "afternoon": "بعد الظهر",
+  "evening": "المساء",
+
+  "standard": "عادي",
+  "advanced": "متقدم",
+  "adaptive": "تكيفي",
+
+  "passExam": "النجاح في الامتحان",
+  "improveSkills": "تطوير المهارات",
+  "getCertified": "الحصول على شهادة",
+
+  "tolims": "توليمز",
+  "stars": "نجوم",
+  "notEnoughTolims": "ليس لديك ما يكفي من التوليمز!",
+  "youGotStars": "لقد حصلت على {count} نجوم!",
+  "getStars": "احصل على {count} نجوم",
+
+  "missingNumber": "العدد المفقود",
+  "findLargest": "ابحث عن الأكبر",
+  "addition": "الجمع",
+  "subtraction": "الطرح",
+  "countObjects": "عدّ الأشياء",
+  "compareNumbers": "قارن الأعداد",
+  "oddNumbers": "الأعداد الفردية",
+  "targetNumber": "العدد المستهدف",
+  "letsPractiseMath": "📚 هيا نتدرّب على الرياضيات!",
+  "funGamesToBeStar": "ألعاب ممتعة لتصبح نجم الرياضيات 🌟",
+ "areYouSureQuitGame": "هل أنت متأكد أنك تريد إنهاء اللعبة؟",
+  "youWillLoseYourProgress": "ستفقد تقدمك.",
+
+  "howManyObjects": "كم عدد {object} التي تراها؟",
+  "findMissingNumber": "ابحث عن الرقم المفقود",
+  "remainingLives": "الحياة المتبقية",
+  "findLargestNumber": "ما هو أكبر رقم؟",
+  "streak": "سلسلة صحيحة",
+  "howMuchIs": "كم يساوي؟",
+  "or": "أو",
+  "whichIsTheLargestNumber": "ما هو أكبر رقم؟",
+  "isNumberEvenOrOdd": "هل الرقم {number} زوجي أم فردي؟",
+  "even": "زوجي",
+  "odd": "فردي",
+  "reachTheNumber": "وصل إلى الرقم:",
+  "noNumberChosen": "لم يتم اختيار أي رقم",
+  "currentSum": "المجموع الحالي",
+  "answer": "إجابة"
+
+
 
 }
