--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -487,9 +487,81 @@
   "myCollection": "Ma collection",
   "search": "Recherche",
   "showAll": "Afficher tout",
-  "showLess": "Afficher moins"
+  "showLess": "Afficher moins",
 
+ "learningPreferences": "Préférences d'apprentissage",
+  "subjects": "Matières",
+  "enterSubjects": "Entrez les matières",
+  "learningStyle": "Style d'apprentissage",
+  "studyTime": "Heure d'étude",
+  "difficulty": "Difficulté",
+  "goals": "Objectifs",
+  "weeklyGoal": "Objectif hebdomadaire",
+  "longTermGoal": "Objectif à long terme",
 
+   "learningPreferences": "Préférences d'apprentissage",
+    "subjects": "Matières",
+    "enterSubjects": "Saisir les matières",
+    "learningStyle": "Style d'apprentissage",
+    "studyTime": "Temps d'étude",
+    "difficulty": "Niveau de difficulté",
+    "goals": "Objectifs",
+    "weeklyGoal": "Objectif hebdomadaire",
+    "longTermGoal": "Objectif à long terme",
+    "save": "Enregistrer",
+    "next": "Suivant",
+    "back": "Retour",
+
+    "visual": "Visuel",
+    "auditory": "Auditif",
+    "kinesthetic": "Kinesthésique",
+
+    "morning": "Matin",
+    "afternoon": "Après-midi",
+    "evening": "Soir",
+
+    "standard": "Standard",
+    "advanced": "Avancé",
+    "adaptive": "Adaptatif",
+
+    "passExam": "Réussir l'examen",
+    "improveSkills": "Améliorer les compétences",
+    "getCertified": "Obtenir une certification",
+
+   "tolims": "Tolims",
+    "stars": "Étoiles",
+    "notEnoughTolims": "Pas assez de Tolims !",
+    "youGotStars": "Vous avez reçu {count} étoiles !",
+    "getStars": "Obtenir {count} étoiles",
+
+    "missingNumber": "Nombre manquant",
+    "findLargest": "Trouver le plus grand",
+    "addition": "Addition",
+    "subtraction": "Soustraction",
+    "countObjects": "Compter les objets",
+    "compareNumbers": "Comparer les nombres",
+    "oddNumbers": "Nombres impairs",
+    "targetNumber": "Nombre cible",
+    "letsPractiseMath": "📚 Pratiquons les mathématiques !",
+    "funGamesToBeStar": "Des jeux amusants pour devenir une star des maths 🌟",
+   "areYouSureQuitGame": "Êtes-vous sûr de vouloir quitter le jeu ?",
+     "youWillLoseYourProgress": "Vous perdrez votre progression.",
+
+     "howManyObjects": "Combien de {object} voyez-vous ?",
+     "findMissingNumber": "Trouvez le nombre manquant",
+     "remainingLives": "Vies restantes",
+     "findLargestNumber": "Quel est le plus grand nombre ?",
+     "streak": "Série",
+     "howMuchIs": "Combien ça fait ?",
+     "or": "ou",
+     "whichIsTheLargestNumber": "Quel est le plus grand nombre ?",
+     "isNumberEvenOrOdd": "Le nombre {number} est-il pair ou impair ?",
+     "even": "Pair",
+     "odd": "Impair",
+     "reachTheNumber": "Atteignez le nombre :",
+     "noNumberChosen": "Aucun nombre choisi",
+     "currentSum": "Somme actuelle",
+     "answer": "Réponse"
 
 
 }
