--- a/lib/l10n/app_zgh.arb
+++ b/lib/l10n/app_zgh.arb
@@ -402,87 +402,154 @@
                     "aboutMission": "ⵎⵓⵔⵜⴰⵄⴰⵍⵉⵎ ⵣⵓⵍ ⵉⵎⵎⵓⵔⵉ ⵏ ⵉⴷⵔⵉⵣⵉ ⵉⵎⵎⴰⵣⵉⵖⵏ ⴷ ⵓⵙⵙⵓⵎⵎ ⵏ ⵎⴰⵔⵓⴽⵓ. ⴰⵎⵏⴰⵡⵉ ⵓⵙⵙⵉⵏ ⵏ ⵓⴳⴷⵉⵎ, ⵓⴳⵏⴰⵡ ⵏ ⵎⴰⵣⵉⵖ ⵓⵙⵙⵓⵎⵎ.",
                     "aboutFuturePlans": "ⵎⴰⵏⴰ ⵣⵓⵍ ⵉⵙⵙⵓⵎⵎ ⵏ ⴷⵓⵍ ⵉⵙⵏⵏⴰⵡⵏ, ⵓⵏⵙⵏⴰ ⵏ ⵉⵎⴰⵙⵉⵏ ⵓⵙⵙⵓⵎⵎ ⵏ ⵉⵎⵎⵓⵔⵉ ⵓⵏⵙⵏⴰ ⵏ ⵎⴰⵔⵓⴽⵓ ⵓⵙⵙⵓⵎⵎ.",
 
-  "thanksForYourPurchase": "ⵙⴰⵎⵎⵓⵙ ⵏ ⵜⵓⵏⴰⵡⵍⴰⵢⵏⴰⵏ",
-  "transactionComplete": "ⵜⴰⴳⵍⵍⴰⵍⵜ ⴷ ⵜⵓⵏⴰⵡⵍⴰⵢ",
-  "keepShining": "ⵙⴻⴹⵉ ⴰⵢⵏⴰ ⴳⵯⵓⵔ",
-  "keepCollecting": "ⵙⴻⴹⵉ ⴰⵢⵏⴰ ⵜⴰⵙⵎⵎⴰⵔⵜ",
-  "badgeUnlocked": "ⵜⴰⴼⵓⵙⵜ ⵏⵉ ⵜⵎⵙⵏⵏⴰ",
-  "level": "ⵜⵓⴳⵍⴰⵍⵜ",
-  "quick": "ⴰⵙⴻⵏⴻⴹ",
-  "rare": "ⵏⴰⴷⴰⵔ",
-  "rewardScreen": "ⵜⴰⵙⴻⵎⵎⵉⵏⵜ ⵏ ⵓⴳⵓⴷ",
-  "tapAnywhereToContinue": "ⴽⵡ ⵓⵏⴰ ⵏ ⵉⴷⴷⴰ ⵏⴰⵏ ⵉⵏⴰ ⵜⴰⵙⴻⴹⵉ",
-  "collected": "ⵜⴰⵙⵎⵎⴰⵔⵜ",
-  "earnMoreToUnlockThisAvatar": "ⵙⴻⴹ ⵎⴰⵣⵣⴰⵔ ⵏ ⵜⴰⴼⵓⵙⵜ ⵏ ⵜⵉⵏⵏⴰⵡ",
-  "selected": "ⵜⴰⵙⵙⵓⵎⵜ",
-  "unlocked": "ⵜⴰⴼⵓⵙⵜ",
-  "unlockBanner": "ⵜⴰⴼⵓⵙⵜ ⴰⵏ ⴱⴰⵏⵏⴰⵔ",
-  "banner": "ⴱⴰⵏⵏⴰⵔ",
-  "unlockThis": "ⵜⴰⴼⵓⵙⵜ ⵏ ⵓⵙⵙ",
-  "confirmPurchase": "ⵜⴰⵙⵙⴰⵍⵍⵓ ⵏ ⵜⵓⵏⴰⵡⵍⴰⵢ",
-  "avatarUnlocked": "ⵜⴰⴼⵓⵙⵜ ⵏ ⵜⵉⵏⵏⴰⵡ",
-  "enjoy": "ⵉⵎⵎⴰⵙ",
+          "thanksForYourPurchase": "ⵙⴰⵎⵎⵓⵙ ⵏ ⵜⵓⵏⴰⵡⵍⴰⵢⵏⴰⵏ",
+          "transactionComplete": "ⵜⴰⴳⵍⵍⴰⵍⵜ ⴷ ⵜⵓⵏⴰⵡⵍⴰⵢ",
+          "keepShining": "ⵙⴻⴹⵉ ⴰⵢⵏⴰ ⴳⵯⵓⵔ",
+          "keepCollecting": "ⵙⴻⴹⵉ ⴰⵢⵏⴰ ⵜⴰⵙⵎⵎⴰⵔⵜ",
+          "badgeUnlocked": "ⵜⴰⴼⵓⵙⵜ ⵏⵉ ⵜⵎⵙⵏⵏⴰ",
+          "level": "ⵜⵓⴳⵍⴰⵍⵜ",
+          "quick": "ⴰⵙⴻⵏⴻⴹ",
+          "rare": "ⵏⴰⴷⴰⵔ",
+          "rewardScreen": "ⵜⴰⵙⴻⵎⵎⵉⵏⵜ ⵏ ⵓⴳⵓⴷ",
+          "tapAnywhereToContinue": "ⴽⵡ ⵓⵏⴰ ⵏ ⵉⴷⴷⴰ ⵏⴰⵏ ⵉⵏⴰ ⵜⴰⵙⴻⴹⵉ",
+          "collected": "ⵜⴰⵙⵎⵎⴰⵔⵜ",
+          "earnMoreToUnlockThisAvatar": "ⵙⴻⴹ ⵎⴰⵣⵣⴰⵔ ⵏ ⵜⴰⴼⵓⵙⵜ ⵏ ⵜⵉⵏⵏⴰⵡ",
+          "selected": "ⵜⴰⵙⵙⵓⵎⵜ",
+          "unlocked": "ⵜⴰⴼⵓⵙⵜ",
+          "unlockBanner": "ⵜⴰⴼⵓⵙⵜ ⴰⵏ ⴱⴰⵏⵏⴰⵔ",
+          "banner": "ⴱⴰⵏⵏⴰⵔ",
+          "unlockThis": "ⵜⴰⴼⵓⵙⵜ ⵏ ⵓⵙⵙ",
+          "confirmPurchase": "ⵜⴰⵙⵙⴰⵍⵍⵓ ⵏ ⵜⵓⵏⴰⵡⵍⴰⵢ",
+          "avatarUnlocked": "ⵜⴰⴼⵓⵙⵜ ⵏ ⵜⵉⵏⵏⴰⵡ",
+          "enjoy": "ⵉⵎⵎⴰⵙ",
 
-  "doYouWantToUnlockThis": "ⴰⵢⵏⴰ ⵏⵓⵙⵙⴰ ⵜⴰⴼⵓⵙⵜ ⵏ ⵓⵙⵙ?",
-  "go": "ⴰⵣⵓ",
-  "profileSaved": "ⵖⵓⴷ ⴰⵏ ⵖⵓⴷⴷ",
-  "nameRule": "ⴰⵙⴻⵏ ⵏⴰⵡ ⵏ ⴰⵣⴳⵓⵍ ⴷ 3 ⵎⵙⵙⵓⵔ",
-  "invalidEmail": "ⵉⵎⵎⴰⵙ ⴷ ⵉⵎⵎⵓⵏⵏⴰ ⵢⴰⵏⵏⵉ",
-  "readyToSave": "ⴰⵣⵓ ⵏ ⵜⴰⵙⵙⴰⵍⵍⴰ",
-  "royalty": "ⴰⵎⵙⵙⵓⴽ",
-  "babies": "ⴰⵣⵉⴷⵉⵏ",
+          "doYouWantToUnlockThis": "ⴰⵢⵏⴰ ⵏⵓⵙⵙⴰ ⵜⴰⴼⵓⵙⵜ ⵏ ⵓⵙⵙ?",
+          "go": "ⴰⵣⵓ",
+          "profileSaved": "ⵖⵓⴷ ⴰⵏ ⵖⵓⴷⴷ",
+          "nameRule": "ⴰⵙⴻⵏ ⵏⴰⵡ ⵏ ⴰⵣⴳⵓⵍ ⴷ 3 ⵎⵙⵙⵓⵔ",
+          "invalidEmail": "ⵉⵎⵎⴰⵙ ⴷ ⵉⵎⵎⵓⵏⵏⴰ ⵢⴰⵏⵏⵉ",
+          "readyToSave": "ⴰⵣⵓ ⵏ ⵜⴰⵙⵙⴰⵍⵍⴰ",
+          "royalty": "ⴰⵎⵙⵙⵓⴽ",
+          "babies": "ⴰⵣⵉⴷⵉⵏ",
 
-  "myMasterpiece": "ⴰⵎⵙⵙⴰⵏ ⵏⵉ",
-  "youCanSpendONETolimToSaveOrWatchTwoAdsToSaveForFree": "ⵣⴰⵡ ⵎⴰⵙⵙⵉⵏ 5 Tolim ⵏ ⵜⴰⵣⵓⵍ ⵏⴰ ⵉⴷⴷⴰ ⵏⵉ 2 ⵏⵓⴳⴳⵓⵔ ⵏ ⵜⴰⵣⵓⵍ ⵏ ⵎⵓⴷⴷⵉⵏ",
-  "spendONETolim": "ⵎⴰⵙⵙⵉⵏ 5 Tolim",
-  "confirmSpending": "ⵜⴰⵙⵙⴰⵍⵍⵓ ⵏ ⵎⴰⵙⵙⵉⵏ",
-  "thisWillDeductONEtolimProceed": "ⵓⵙⵙⵓⴹ 5 Tolim. ⴰⵙⴳⵯⴰⵔ?",
-  "failedToSaveDrawing": "ⴰⵎⵣⵓⵍ ⵏ ⵜⴰⵣⵓⵍ ⴷ ⵓⵙⵙⴰⵏ ⴷⵉⵖ",
-  "chooseColor": "ⵣⴰⵡ ⵏ ⵓⵍⵓⵏ",
-  "brush": "ⴰⴳⵯⵔⴰⵙ",
-  "brushSize": "ⵙⵉⵏⴰ ⴷ ⴰⴳⵯⵔⴰⵙ",
-  "eraser": "ⴰⵎⵎⴰⵙ",
-  "eraserOff": "ⴰⵎⵎⴰⵙ ⵎⵓⵙⴽⵉ",
-  "eraserOn": "ⴰⵎⵎⴰⵙ ⵎⴰⴹⴰⵔ",
-  "clearCanvas": "ⵙⵎⵎⴰⵙ ⵜⴰⵣⵓⵍⵍⴰ",
+          "myMasterpiece": "ⴰⵎⵙⵙⴰⵏ ⵏⵉ",
+          "youCanSpendONETolimToSaveOrWatchTwoAdsToSaveForFree": "ⵣⴰⵡ ⵎⴰⵙⵙⵉⵏ 5 Tolim ⵏ ⵜⴰⵣⵓⵍ ⵏⴰ ⵉⴷⴷⴰ ⵏⵉ 2 ⵏⵓⴳⴳⵓⵔ ⵏ ⵜⴰⵣⵓⵍ ⵏ ⵎⵓⴷⴷⵉⵏ",
+          "spendONETolim": "ⵎⴰⵙⵙⵉⵏ 5 Tolim",
+          "confirmSpending": "ⵜⴰⵙⵙⴰⵍⵍⵓ ⵏ ⵎⴰⵙⵙⵉⵏ",
+          "thisWillDeductONEtolimProceed": "ⵓⵙⵙⵓⴹ 5 Tolim. ⴰⵙⴳⵯⴰⵔ?",
+          "failedToSaveDrawing": "ⴰⵎⵣⵓⵍ ⵏ ⵜⴰⵣⵓⵍ ⴷ ⵓⵙⵙⴰⵏ ⴷⵉⵖ",
+          "chooseColor": "ⵣⴰⵡ ⵏ ⵓⵍⵓⵏ",
+          "brush": "ⴰⴳⵯⵔⴰⵙ",
+          "brushSize": "ⵙⵉⵏⴰ ⴷ ⴰⴳⵯⵔⴰⵙ",
+          "eraser": "ⴰⵎⵎⴰⵙ",
+          "eraserOff": "ⴰⵎⵎⴰⵙ ⵎⵓⵙⴽⵉ",
+          "eraserOn": "ⴰⵎⵎⴰⵙ ⵎⴰⴹⴰⵔ",
+          "clearCanvas": "ⵙⵎⵎⴰⵙ ⵜⴰⵣⵓⵍⵍⴰ",
 
-  "animalSound": "ⵉⵎⴰⵣⴰⵢ ⵏ ⵓⵙⴻⵏⴰⵡ",
-  "listenMode": "ⴰⵎⴰⵢⴰⵏ ⵏ ⵉⴼⵔⴰⵢ",
-  "tapAnimalsToHearTheirSounds": "ⴰⵙⴽⵓⵔ ⴰⵙⴻⵏⴰⵡ ⴷ ⵉⴼⵔⴰⵢ ⵉⵎⴰⵣⴰⵢⵏ",
-  "matchAndDrop": "ⴰⵙⵍⵉⵙ ⴷ ⴰⴱⴰⵔⴷ",
-  "dragAnimalsToMatchTheirSounds": "ⴰⴱⴰⵙⴽⴽⵓⵔ ⴰⵙⴻⵏⴰⵡ ⴷ ⵉⵙⵍⵉⵙⵏ ⵉⵎⴰⵣⴰⵢⵏ",
-  "tapTheAnimalToHearItsSound": "ⴰⵙⴽⵓⵔ ⴰⵙⴻⵏⴰⵡ ⴷ ⵉⴼⵔⴰⵢ ⵉⵎⴰⵣⴰⵢⵏ",
-  "matchTheSound": "ⵉⵙⵍⵉⵙ ⵉⵎⴰⵣⴰⵢ",
-  "listenThenDragTheCorrectAnimalIntoTheGlowingRing": "ⵉⴼⵔⴰⵢ ⴷ ⴰⴱⴰⵙⴽⴽⵓⵔ ⴰⵙⴻⵏⴰⵡ ⴰⴽⴰⴼ ⴰⴷ ⵉⴹⵓⵍⵉ ⵏ ⴰⵎⴰⵔⵉⴳⴰⵏ",
-  "rewarded": "ⵉⵙⴻⵎⵎⴰⴹ",
-  "youFinishedWith": "ⵉⴼⴻⵙ ⴷ",
-  "dontWorry": "ⴰⵎⴰ ⵜⵉⵍⴰ",
-  "youCanTryAgain": "ⵜⴰⴷ ⵜⵎⴰⵢⴰⵙⴷ ⵖⴻⵔⵖ",
+          "animalSound": "ⵉⵎⴰⵣⴰⵢ ⵏ ⵓⵙⴻⵏⴰⵡ",
+          "listenMode": "ⴰⵎⴰⵢⴰⵏ ⵏ ⵉⴼⵔⴰⵢ",
+          "tapAnimalsToHearTheirSounds": "ⴰⵙⴽⵓⵔ ⴰⵙⴻⵏⴰⵡ ⴷ ⵉⴼⵔⴰⵢ ⵉⵎⴰⵣⴰⵢⵏ",
+          "matchAndDrop": "ⴰⵙⵍⵉⵙ ⴷ ⴰⴱⴰⵔⴷ",
+          "dragAnimalsToMatchTheirSounds": "ⴰⴱⴰⵙⴽⴽⵓⵔ ⴰⵙⴻⵏⴰⵡ ⴷ ⵉⵙⵍⵉⵙⵏ ⵉⵎⴰⵣⴰⵢⵏ",
+          "tapTheAnimalToHearItsSound": "ⴰⵙⴽⵓⵔ ⴰⵙⴻⵏⴰⵡ ⴷ ⵉⴼⵔⴰⵢ ⵉⵎⴰⵣⴰⵢⵏ",
+          "matchTheSound": "ⵉⵙⵍⵉⵙ ⵉⵎⴰⵣⴰⵢ",
+          "listenThenDragTheCorrectAnimalIntoTheGlowingRing": "ⵉⴼⵔⴰⵢ ⴷ ⴰⴱⴰⵙⴽⴽⵓⵔ ⴰⵙⴻⵏⴰⵡ ⴰⴽⴰⴼ ⴰⴷ ⵉⴹⵓⵍⵉ ⵏ ⴰⵎⴰⵔⵉⴳⴰⵏ",
+          "rewarded": "ⵉⵙⴻⵎⵎⴰⴹ",
+          "youFinishedWith": "ⵉⴼⴻⵙ ⴷ",
+          "dontWorry": "ⴰⵎⴰ ⵜⵉⵍⴰ",
+          "youCanTryAgain": "ⵜⴰⴷ ⵜⵎⴰⵢⴰⵙⴷ ⵖⴻⵔⵖ",
 
-  "adventureMode": "ⴰⵎⴰⵙⴻⵏ ⵏ ⵉⴳⵯⵔⴰⵙ",
-  "memoryFlip": "ⵡⴰⵙⵏ ⵏ ⴰⴷⵔⴰⵔ",
-  "playThroughLevelsAndEarn": "ⴰⵣⴰⵡ ⵏ ⴰⴱⵔⴰⵣ ⴷ ⵉⵙⵙⴻⴷ ⵏ ⵉⵎⵣⵣⵓⵔⴰⵜ",
-  "survivalMode": "ⴰⵎⴰⵙⴻⵏ ⵏ ⵜⵉⴹⵓⵍⵜ",
-  "seeHowLongYouCanSurviveWithLimitedMoves": "ⵉⵡⴰ ⴷ ⵉⵎⵣⵣⵓⵔⴰⵜ ⵏ ⵓⴷⴰ ⵜⵉⵎⵎⴰⴷⴻⵏ",
-  "selectLevel": "ⴰⵎⵙⵍⵉ ⵏ ⴰⴱⵔⴰⵣ",
-  "chooseCategory": "ⴰⵎⵙⵍⵉ ⵏ ⴰⴷⵔⴰⵔ",
-  "moves": "ⵉⵎⵣⵣⵓⵔⴰⵜ",
-  "matches": "ⵉⵙⵍⵉⵙⵏ",
-  "noMovesLeft": "ⵢⴰⵏⵢ ⵉⵎⵣⵣⵓⵔⴰⵜ ⵓⵎⵓⵙⵙⵓⵏ",
-  "restartingLevel": "ⴰⴱⴰⵔⴷ ⵏ ⴰⴱⵔⴰⵣ",
-  "restart": "ⴰⴱⴰⵔⴷ",
-  "youRanOutOfMoves": "ⵢⴰⵏⵢ ⵉⵎⵣⵣⵓⵔⴰⵜ ⵓⵎⵓⵙⵙⵓⵏ",
-  "highlights": "ⵉⵙⵍⵉⵙⵏ ⵏ ⵉⴼⵔⴰⵢ",
-  "youSurvivedFor": "ⵉⴼⴻⵙ ⴷ",
-  "best": "ⴰⴼⵓⵙⵜ",
-  "andMade": "ⴷ ⵉⵙⴻⵎⵎⴰⴹ",
-  "seconds": "ⵉⵙⴻⵏⴰⵡⴰⵜ",
-  "matchesIn": "ⵉⵙⵍⵉⵙⵏ ⵏ",
-  "survivalHighlights": "ⵉⵙⵍⵉⵙⵏ ⵏ ⵜⵉⴹⵓⵍⵜ",
-  "bestSurvivalScore": "ⴰⴼⵓⵙⵜ ⵏ ⵜⵉⴹⵓⵍⵜ",
-  "myCollection": "ⴰⵙⴼⴽ ⵏ ⵉⵡ",
-  "search": "ⴰⴼⴻⴹⵓ",
-  "showAll": "ⵙⴼⴽ ⴰⵖⵢⵓⵍ",
-  "showLess": "ⵙⴼⴽ ⴰⵇⴻⵔⵔⵓ"
+          "adventureMode": "ⴰⵎⴰⵙⴻⵏ ⵏ ⵉⴳⵯⵔⴰⵙ",
+          "memoryFlip": "ⵡⴰⵙⵏ ⵏ ⴰⴷⵔⴰⵔ",
+          "playThroughLevelsAndEarn": "ⴰⵣⴰⵡ ⵏ ⴰⴱⵔⴰⵣ ⴷ ⵉⵙⵙⴻⴷ ⵏ ⵉⵎⵣⵣⵓⵔⴰⵜ",
+          "survivalMode": "ⴰⵎⴰⵙⴻⵏ ⵏ ⵜⵉⴹⵓⵍⵜ",
+          "seeHowLongYouCanSurviveWithLimitedMoves": "ⵉⵡⴰ ⴷ ⵉⵎⵣⵣⵓⵔⴰⵜ ⵏ ⵓⴷⴰ ⵜⵉⵎⵎⴰⴷⴻⵏ",
+          "selectLevel": "ⴰⵎⵙⵍⵉ ⵏ ⴰⴱⵔⴰⵣ",
+          "chooseCategory": "ⴰⵎⵙⵍⵉ ⵏ ⴰⴷⵔⴰⵔ",
+          "moves": "ⵉⵎⵣⵣⵓⵔⴰⵜ",
+          "matches": "ⵉⵙⵍⵉⵙⵏ",
+          "noMovesLeft": "ⵢⴰⵏⵢ ⵉⵎⵣⵣⵓⵔⴰⵜ ⵓⵎⵓⵙⵙⵓⵏ",
+          "restartingLevel": "ⴰⴱⴰⵔⴷ ⵏ ⴰⴱⵔⴰⵣ",
+          "restart": "ⴰⴱⴰⵔⴷ",
+          "youRanOutOfMoves": "ⵢⴰⵏⵢ ⵉⵎⵣⵣⵓⵔⴰⵜ ⵓⵎⵓⵙⵙⵓⵏ",
+          "highlights": "ⵉⵙⵍⵉⵙⵏ ⵏ ⵉⴼⵔⴰⵢ",
+          "youSurvivedFor": "ⵉⴼⴻⵙ ⴷ",
+          "best": "ⴰⴼⵓⵙⵜ",
+          "andMade": "ⴷ ⵉⵙⴻⵎⵎⴰⴹ",
+          "seconds": "ⵉⵙⴻⵏⴰⵡⴰⵜ",
+          "matchesIn": "ⵉⵙⵍⵉⵙⵏ ⵏ",
+          "survivalHighlights": "ⵉⵙⵍⵉⵙⵏ ⵏ ⵜⵉⴹⵓⵍⵜ",
+          "bestSurvivalScore": "ⴰⴼⵓⵙⵜ ⵏ ⵜⵉⴹⵓⵍⵜ",
+          "myCollection": "ⴰⵙⴼⴽ ⵏ ⵉⵡ",
+          "search": "ⴰⴼⴻⴹⵓ",
+          "showAll": "ⵙⴼⴽ ⴰⵖⵢⵓⵍ",
+          "showLess": "ⵙⴼⴽ ⴰⵇⴻⵔⵔⵓ",
+
+  "learningPreferences": "ⵜⴰⵙⴳⴰⵙⵉⵏ ⵏ ⵜⵎⵎⴰⵣⵉⵖⵜ",
+  "subjects": "ⵜⴰⵙⵏⵓⵙⵉⵏ",
+  "enterSubjects": "ⵙⵙⵉ ⵜⴰⵙⵏⵓⵙⵉⵏ",
+  "learningStyle": "ⵜⴰⵎⵓⵔⵜ ⵏ ⵜⵎⵎⴰⵣⵉⵖⵜ",
+  "studyTime": "ⵜⴰⵙⵔⴰ ⵏ ⵜⵎⵎⴰⵣⵉⵖⵜ",
+  "difficulty": "ⵜⴰⵙⵉⵡⴰⵏⵜ",
+  "goals": "ⵜⵉⴼⵉⵔⵉⵡⵉⵏ",
+  "weeklyGoal": "ⴰⵎⴰⵢ ⴰⵎⵙⵙⵉⴹ",
+  "longTermGoal": "ⴰⵎⴰⵢ ⴰⵎⴰⵣⵉⴷ",
+  "save": "ⵎⴰⵣⵉⵖ",
+  "next": "ⴰⵎⵢⴰⵍ",
+  "back": "ⴰⵙⴳⴰⵏ",
+
+  "visual": "ⴰⴳⵔⴰⵡ",
+  "auditory": "ⴰⵙⵎⵓⴹ",
+  "kinesthetic": "ⴰⵎⴰⴷⵓⵙ",
+
+  "morning": "ⵜⵉⴼⵓⴽⵍⵉ",
+  "afternoon": "ⵜⴰⵙⴳⴰⵎⴰⵜ",
+  "evening": "ⵜⴰⴷⵔⴰⵢⵜ",
+
+  "standard": "ⴰⵏⵓⵔⵓⵙ",
+  "advanced": "ⴰⴳⵔⵓⵎ",
+  "adaptive": "ⴰⵙⴳⴰⵍ",
+
+  "passExam": "ⵉⵙⵉ ⵜⵉⵙⴳⴰⵎⵉⵏ",
+  "improveSkills": "ⵙⵙⵉⵡⴰ ⵜⵉⴼⵉⵔⵉⵡⵉⵏ",
+  "getCertified": "ⵙⵙⵉ ⵜⵉⵙⵓⵍⵉ",
+  "tolims": "ⵜⵓⵍⵉⵎⵣ",
+  "stars": "ⵉⵎⵓⴹⵉⵏ",
+  "notEnoughTolims": "ⵓⵔ ⵉⵎⵔⵉ ⵜⵓⵍⵉⵎⵣ!",
+  "youGotStars": "ⴰⵣⵓⵍ ⵏⵏⵙⵎⴽ {count} ⵉⵎⵓⴹⵉⵏ!",
+  "getStars": "ⵎⵙⵎⴽ {count} ⵉⵎⵓⴹⵉⵏ",
+
+   "missingNumber": "ⴰⵎⴰⵢ ⴰⵎⴹⴰⵢ",
+   "findLargest": "ⴰⵔⴰ ⴰⴼⴽⵓⵍ",
+   "addition": "ⵉⵙⵔⵉ",
+   "subtraction": "ⵉⴼⴹⴹⵉ",
+   "countObjects": "ⵉⵎⵎⴰⴷ ⵏ ⵜⴰⵙⵉⵏⵜ",
+   "compareNumbers": "ⵜⴰⵙⴷⴰⵢⵜ ⵏ ⵉⵎⴰⵢⵏ",
+   "oddNumbers": "ⵉⵎⴰⵢⵏ ⵉⵎⴷⴷⴰⵢⵏ",
+   "targetNumber": "ⴰⵎⴰⵢ ⴰⴼⴽⵓⵍ",
+   "letsPractiseMath": "📚 ⴰⴼⴽⵔⴹ ⴰⵎⴰⵜⵉⵔⵉⵜ!",
+   "funGamesToBeStar": "ⵉⵎⵉⴽⴽⵉⵏ ⵎⴰⵙⴰⵏⵉⵢⵏ ⴷ ⵜⵓⵜⵍⴰⴳⵜ ⵏ ⵎⴰⵜⵉⵔⵉⵜ 🌟",
+   "areYouSureQuitGame": "ⴰⵢⴻⵏⵓ ⵏⴽ ⵜⴰⵎⵓⴷⵓⴷ ⴷ ⵉⵙⴳⵔⵉ ⵏ ⴰⵍⴰⵡⵢⵓⵏ?",
+   "youWillLoseYourProgress": "ⵜⵉⵎⵉ ⵏⵉⵣⵡⴰⵙ ⵏⵓⵙⴻⵏ.",
+
+   "howManyObjects": "ⵎⴰⵏⵉ {object} ⵜⵣⵎⵔⴻⴹ?",
+   "findMissingNumber": "ⵣⴻⵔ ⴰⴷⵔⴰⵔ ⵉⵎⵓⵇⵔⴰⵏ",
+   "remainingLives": "ⵜⵖⵉⵜ ⵏ ⵡⴰⵢⴻⵏ ⵉ ⵜⵣⴻⴷ",
+   "findLargestNumber": "ⴰⵏⵡⴰ ⴷ ⴰⵎⵓⵇⵔⴰⵏ ⴰⵎⴹⴰⵏ?",
+   "streak": "ⵜⴰⵣⵎⴻⵔⵜ",
+   "howMuchIs": "ⴰⵎⴻⴽ ⵉ ⴷ-ⴹⵉ?",
+   "or": "ⵏⴻⵖ",
+   "whichIsTheLargestNumber": "ⴰⵏⵡⴰ ⴷ ⴰⵎⵓⵇⵔⴰⵏ ⴰⵎⴹⴰⵏ?",
+   "isNumberEvenOrOdd": "ⵎⴰ {number} ⴷ ⵉⴹⴻⵙ ⵏⴻⵖ ⴰⵎⴻⵇⵔⴰⵏ?",
+   "even": "ⵉⴹⴻⵙ",
+   "odd": "ⴰⵎⴻⵇⵔⴰⵏ",
+   "reachTheNumber": "ⵙⵙⴻⵍ ⴰⴷⵔⴰⵔ:",
+   "noNumberChosen": "ⵓⵔ ⵢⴻⵜⵜⵡⴰⵙⵏ ⴰⵔⴰ ⴰⴷⵔⴰⵔ",
+   "currentSum": "ⴰⵃⵔⵉⵙ ⵏ ⵢⵍⴰⵏ",
+   "answer": "ⵜⴰⵍⵎⴰⵢⵜ"
+
+
+
+
 
 }
