--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -574,7 +574,15 @@
  "backupHowRestoreDesc": "استخدم 'تحميل النسخ الاحتياطي' وأدخل الرمز المحفوظ. سيتم استعادة تقدمك على الفور.",
  "back": "رجوع",
  "next": "التالي",
- "done": "تم"
+ "done": "تم",
+
+  "loginWithoutGoogle": "تسجيل الدخول بدون جوجل",
+   "loginWithoutGoogleDescription": "سوف تقوم بتسجيل الدخول بدون جوجل. بعد هذا الدخول الأول، ستتمكن من استخدام التطبيق دون اتصال بالإنترنت.",
+   "loginWithGoogle": "تسجيل الدخول باستخدام جوجل",
+   "loginWithGoogleDescription": "سوف تقوم بتسجيل الدخول باستخدام جوجل. بعد هذا الدخول الأول، ستتمكن من استخدام التطبيق دون اتصال بالإنترنت.",
+
+   "manualBackupNotice": "البيانات لا تتم مزامنتها تلقائيًا.\nيرجى الحفظ يدويًا في قسم النسخ الاحتياطي.",
+   "noInternetConnection": "لم يتم اكتشاف اتصال بالإنترنت"
 
 
 
