PreRelease 1.0.0 LOCALIZATION SCHOOL

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -582,7 +582,13 @@
    "loginWithGoogleDescription": "سوف تقوم بتسجيل الدخول باستخدام جوجل. بعد هذا الدخول الأول، ستتمكن من استخدام التطبيق دون اتصال بالإنترنت.",
 
    "manualBackupNotice": "البيانات لا تتم مزامنتها تلقائيًا.\nيرجى الحفظ يدويًا في قسم النسخ الاحتياطي.",
-   "noInternetConnection": "لم يتم اكتشاف اتصال بالإنترنت"
+   "noInternetConnection": "لم يتم اكتشاف اتصال بالإنترنت",
+
+    "grade": "المستوى الدراسي",
+     "selectGrade": "يرجى اختيار المستوى الدراسي",
+     "no": "لا",
+     "yes": "نعم",
+     "areYouAStudent": "هل أنت طالب؟"
 
 
 
